force-app/main/default/objects/TILBP__TI_Assessment_Attempt__c/TILBP__TI_Assessment_Attempt__c.object-meta.xml
<CustomObject>
    <label>TI Assessment Attempt</label>
    <nameField>
        <displayFormat>TIAA-{0000000}</displayFormat>
        <label>TI Assessment Attempt ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TI Assessment Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>