force-app/main/default/objects/TILBP__TI_Assessment_Attempt__c/fields/TILBP__timeElapsedInSeconds__c.field-meta.xml
<CustomField>
    <fullName>TILBP__timeElapsedInSeconds__c</fullName>
    <label>Time Elapsed In Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>