force-app/main/default/objects/TILBP__TI_Assessment_Attempt__c/fields/TILBP__Topic__c.field-meta.xml
<CustomField>
    <fullName>TILBP__Topic__c</fullName>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>