force-app/main/default/objects/TILBP__TI_Assessment_Attempt__c/fields/TILBP__TopicType__c.field-meta.xml
<CustomField>
    <fullName>TILBP__TopicType__c</fullName>
    <label>Topic Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>